# Blood-Donation-Portal-Backend

./: .isort.cfg  .pre-commit-config.yaml  Dockerfile  pyproject.toml  readme.md  requirements.txt
backend/: settings.py  urls.py
frontend/: package.json
portalapi/: admin.py  apps.py  models.py  signals.py  urls.py
portalapi/migrations/: 0001_initial.py  0002_alter_user_id_alter_user_role.py
portalapi/serializers/request/: aiding_serializers.py  profile_serializers.py  role_serializers.py  user_serializers.py
portalapi/serializers/response/: auth_response_serializers.py
portalapi/utils/: admin_builders.py  constants.py  resources.py
portalapi/views/: aiding_views.py  auth_views.py  profile_views.py
